fix: hide all scrollbard

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,12 +9,19 @@ body {
   font-family: "DM Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  overflow: hidden; /* Ensure no scrollbars on html and body */
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+/* Hide scrollbars in WebKit browsers (e.g., Chrome, Safari, Edge) */
+*::-webkit-scrollbar {
+  display: none; /* WebKit browsers */
 }
 .PhoneInputInput {
   padding: 14px;
